[package]
name = "rust_radix_sort"
version = "0.1.0"
authors = ["Erika Marttinen <erika.marttinen@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "my_benchmark"
harness = false
